# TokenForge

./: .gitignore  .gitmodules  CHANGELOG.md  GRANT_PROPOSAL.md  HACKATHON.md  INVESTORS.md  README.md  claude-session.jsonl  pitch-deck-20260512.html  tokenization-research-report.id.md  tokenization-research-report.md
.kilo/plans/: 1777470655243-gentle-sailor.md  1778153590459-sunny-island.md  1778452978725-gentle-panda.md  1778501351234-nimble-wolf.md
SPECIFICATION/: DESIGN.md  INFRA_SPECS.md  PRD.md  README.md  SPECS.md
dashboard/: DOCUMENTATION.md  package-lock.json  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/(dashboard)/: layout.tsx
dashboard/app/(landing)/: layout.tsx  page.tsx
dashboard/app/docs/: page.tsx
dashboard/app/lp-1/: layout.tsx  page.tsx
dashboard/app/lp-2/: layout.tsx  page.tsx
dashboard/app/lp-3/: layout.tsx  page.tsx
dashboard/components/: address-label.tsx  app-sidebar.tsx  create-token-form.tsx  distribution-form.tsx  famp-policy-form.tsx  mint-token-form.tsx  mint-tokens-form.tsx  status-badge.tsx  transfer-token-form.tsx  wallet-context-provider.tsx
dashboard/components/ui/: transaction-result.tsx
dashboard/db/: schema.ts
dashboard/db/migrations/: 0000_dapper_penance.sql  0001_broken_warhawk.sql
dashboard/lib/: address.ts  db.ts  sdk-bridge.ts
dashboard/public/: pitch-deck.html
pitch-deck/: TokenForge_Pitch_Deck.pptx  generate_deck.py
programs/famp/: Anchor.toml  Cargo.toml  package.json
programs/famp/programs/famp/: Cargo.toml
programs/famp/programs/famp/src/: lib.rs
programs/famp/tests/: famp.ts  famp_integration.ts
programs/ssts/: Anchor.toml  package.json
programs/ssts/programs/ssts/: Cargo.toml
programs/ssts/programs/ssts/src/: lib.rs
programs/ssts/tests/: ssts.ts
programs/verification_policy_noop/: Anchor.toml  README.md  package-lock.json  package.json
programs/verification_policy_noop/programs/verification_policy_noop/: Cargo.toml
programs/verification_policy_noop/programs/verification_policy_noop/src/: lib.rs
programs/verification_policy_noop/tests/: verification_policy_noop.ts
scripts/: run-tests.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/l0/: index.ts
sdk/src/l1/: derive.ts  errors.ts
sdk/src/l2/: index.ts  (+1 more)
(+98 files in other folders)
