[package]
name = "ssts"
version = "0.1.0"
description = "TokenForge Solana Security Token Standard program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ssts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
sha2 = "0.10.8"
