[package]
name = "verification_policy_noop"
version = "0.2.0"
description = "TokenForge reference no-op verification policy — always approves. Compatible with canonical SSTS CPI and introspection modes."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verification_policy_noop"

[dependencies]
solana-program = "2.2.1"
